--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Malgun Gothic', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #ffffff;
             min-height: 100vh;
             padding: 20px;
         }
@@ -26,7 +26,7 @@
 
         .header {
             text-align: center;
-            color: white;
+            color: #2c3e50;
             margin-bottom: 40px;
             animation: fadeInDown 0.6s ease;
         }
@@ -45,7 +45,6 @@
         .header h1 {
             font-size: 3rem;
             margin-bottom: 15px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         }
 
         .header p {
@@ -87,7 +86,7 @@
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease;
-            color: white;
+            color: #333;
             position: relative;
             overflow: hidden;
         }
@@ -100,7 +99,7 @@
             width: 0;
             height: 0;
             border-radius: 50%;
-            background: rgba(255,255,255,0.3);
+            background: rgba(0,0,0,0.05);
             transform: translate(-50%, -50%);
             transition: width 0.6s, height 0.6s;
         }
@@ -112,19 +111,19 @@
 
         .nav-btn:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
         }
 
         .btn-new-quiz {
-            background: linear-gradient(135deg, #3498db, #2980b9);
+            background: #e9ecef;
         }
 
         .btn-dashboard {
-            background: linear-gradient(135deg, #2ecc71, #27ae60);
+            background: #e9ecef;
         }
 
         .btn-user-guide {
-            background: linear-gradient(135deg, #f39c12, #e67e22);
+            background: #e9ecef;
         }
 
         .step-indicator {
@@ -136,21 +135,21 @@
         }
 
         .step {
-            background: rgba(255,255,255,0.2);
-            color: white;
+            background: #e9ecef;
+            color: #6c757d;
             padding: 12px 25px;
             border-radius: 25px;
             font-weight: bold;
-            opacity: 0.5;
+            opacity: 0.6;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
         }
 
         .step.active {
             opacity: 1;
-            background: rgba(255,255,255,0.35);
+            background: #dee2e6;
+            color: #333;
             transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .selection-area {
@@ -167,7 +166,7 @@
             color: #2c3e50;
             margin-bottom: 30px;
             padding-bottom: 15px;
-            border-bottom: 3px solid #3498db;
+            border-bottom: 3px solid #6c757d;
             display: flex;
             align-items: center;
             gap: 15px;
@@ -180,7 +179,7 @@
         }
 
         .card {
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+            background: #ffffff;
             border: 3px solid transparent;
             border-radius: 15px;
             padding: 30px;
@@ -207,14 +206,22 @@
 
         .card:hover {
             transform: translateY(-8px);
-            border-color: #3498db;
-            box-shadow: 0 15px 35px rgba(52, 152, 219, 0.3);
+            border-color: #6c757d;
+            box-shadow: 0 15px 35px rgba(108, 117, 125, 0.3);
         }
 
         .card-icon {
             font-size: 3.5rem;
             margin-bottom: 15px;
             display: block;
+            filter: grayscale(100%);
+            opacity: 0.7;
+            transition: all 0.3s ease;
+        }
+
+        .card:hover .card-icon {
+            filter: grayscale(50%);
+            opacity: 0.9;
         }
 
         .card-title {
@@ -234,8 +241,8 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            background: #2ecc71;
-            color: white;
+            background: #e9ecef;
+            color: #333;
             padding: 5px 12px;
             border-radius: 20px;
             font-size: 0.8rem;
@@ -243,7 +250,7 @@
         }
 
         .card-badge.empty {
-            background: #95a5a6;
+            background: #e9ecef;
         }
 
         .session-card {
@@ -253,12 +260,12 @@
         }
 
         .session-card:hover {
-            border-color: #e74c3c;
+            border-color: #6c757d;
             box-shadow: 0 15px 35px rgba(231, 76, 60, 0.3);
         }
 
         .session-card.selected {
-            border-color: #e74c3c;
+            border-color: #6c757d;
             background: #fff5f5;
             transform: translateY(-5px);
         }
@@ -266,7 +273,7 @@
         .session-year {
             font-size: 1.6rem;
             font-weight: bold;
-            color: #3498db;
+            color: #6c757d;
             margin-bottom: 8px;
         }
 
@@ -286,7 +293,7 @@
             color: #2c3e50;
             margin-bottom: 20px;
             padding-left: 15px;
-            border-left: 5px solid #3498db;
+            border-left: 5px solid #333;
         }
 
         .navigation-buttons {
@@ -327,13 +334,13 @@
         }
 
         .btn-back {
-            background: linear-gradient(135deg, #95a5a6, #7f8c8d);
-            color: white;
+            background: #e9ecef;
+            color: #333;
         }
 
         .btn-start {
-            background: linear-gradient(135deg, #e74c3c, #c0392b);
-            color: white;
+            background: #e9ecef;
+            color: #333;
         }
 
         .btn:hover {
@@ -348,17 +355,17 @@
         }
 
         .breadcrumb {
-            background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+            background: #ffffff;
             padding: 18px 25px;
             border-radius: 12px;
             margin-bottom: 25px;
             color: #7f8c8d;
             font-size: 1rem;
-            border-left: 4px solid #3498db;
+            border-left: 4px solid #333;
         }
 
         .breadcrumb span {
-            color: #3498db;
+            color: #6c757d;
             font-weight: bold;
         }
 
@@ -794,8 +801,8 @@
                             max-width: 500px; margin: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.3);">
                     <h2 style="color: #2c3e50; margin-bottom: 20px;">📊 학습 데이터 수집 안내</h2>
                     
-                    <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
-                        <p style="color: #495057; line-height: 1.6; margin-bottom: 15px;">
+                    <div style="background: #ffffff; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
+                        <p style="color: #6c757d; line-height: 1.6; margin-bottom: 15px;">
                             더 나은 학습 경험을 위해 <strong>익명의 학습 데이터</strong>를 수집합니다:
                         </p>
                         <ul style="color: #6c757d; margin-left: 20px; line-height: 1.8;">
@@ -819,13 +826,13 @@
                     
                     <div style="display: flex; gap: 10px;">
                         <button onclick="acceptDataCollection()" 
-                                style="flex: 1; padding: 15px; background: #28a745; color: white; 
+                                style="flex: 1; padding: 15px; background: #e9ecef; color: #333; 
                                     border: none; border-radius: 8px; font-size: 1rem; 
                                     font-weight: 600; cursor: pointer;">
                             ✅ 동의합니다
                         </button>
                         <button onclick="declineDataCollection()" 
-                                style="flex: 1; padding: 15px; background: #6c757d; color: white; 
+                                style="flex: 1; padding: 15px; background: #e9ecef; color: #333; 
                                     border: none; border-radius: 8px; font-size: 1rem; 
                                     font-weight: 600; cursor: pointer;">
                             ❌ 동의하지 않습니다
